--- a/ineat_e/src/main/webapp/WEB-INF/web.xml
+++ b/ineat_e/src/main/webapp/WEB-INF/web.xml
@@ -29,5 +29,41 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- .eat으로 들어오는 요청 매핑 -->
+	<servlet>
+		<servlet-name>eatServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/eat-servlet.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>eatServlet</servlet-name>
+		<url-pattern>*.eat</url-pattern>
+	</servlet-mapping>
 
+
+	   <!--  POST 방식으로 넘어오는 한글 데이터의 깨짐을 방지하기 위한 필터형 처리  -->
+   <filter>
+      <filter-name>encodingFilter</filter-name>
+      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+      <init-param>
+         <param-name>encoding</param-name>
+         <param-value>UTF-8</param-value>
+      </init-param>
+      <init-param>
+         <param-name>forceEncoding</param-name>
+         <param-value>true</param-value>
+      </init-param>
+   </filter>
+   
+   <filter-mapping>
+      <filter-name>encodingFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
+   
 </web-app>
